--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,8 +1,12 @@
 <div id='signin'>
   <h1>signin</h1>
-  <form name="signinForm" ng-submit='signin()'>
-    <input type='text'ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
+  <form name="signinForm" ng-submit='signin(signinForm.$valid)' novalidate>
+    <input type='text'ng-model='user.username' name="username" ng-class="{ 'has-error' : signinForm.username.$invalid && !signinForm.username.$pristine }" ng-minlength="3" ng-maxlength="8">
+    <input type="password" ng-model='user.password' name="password" ng-class="{ 'has-error' : signinForm.password.$invalid && !signinForm.password.$pristine }" ng-minlength="3" ng-maxlength="8">
+    <p ng-show="signinForm.username.$error.minlength" class="help-block">Username is too short.</p>
+    <p ng-show="signinForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+    <p ng-show="signinForm.password.$error.minlength" class="help-block">password is too short.</p>
+    <p ng-show="signinForm.password.$error.maxlength" class="help-block">password is too long.</p>
     <button>signin</button>
   </form>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
