--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,8 +1,12 @@
 <div id='signup'>
   <h1>signup</h1>
   <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
+    <input type='text' name='name' ng-model='user.username' ng-class="{ 'has-error' : signupForm.name.$invalid && !signupForm.name.$pristine }" ng-minlength="3" ng-maxlength="8">
+    <input type="password" name='password' ng-model='user.password' ng-class="{ 'has-error' : signupForm.password.$invalid && !signupForm.password.$pristine }" ng-minlength="3" ng-maxlength="8">
+    <p ng-show="signupForm.name.$error.minlength" class="help-block">Username is too short.</p>
+    <p ng-show="signupForm.name.$error.maxlength" class="help-block">Username is too long.</p>
+    <p ng-show="signupForm.password.$error.minlength" class="help-block">password is too short.</p>
+    <p ng-show="signupForm.password.$error.maxlength" class="help-block">password is too long.</p>
     <button>signup</button>
   </form>
   <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
