Get ui-router out.

--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -9,5 +9,5 @@
     <p ng-show="signinForm.password.$error.maxlength" class="help-block">password is too long.</p>
     <button>signin</button>
   </form>
-  <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
+  <a ui-sref="signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
