--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -9,5 +9,5 @@
     <p ng-show="signupForm.password.$error.maxlength" class="help-block">password is too long.</p>
     <button>signup</button>
   </form>
-  <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
+  <a ui-sref="signin">Already have an account? <strong>Signin</strong> ...</a>
 </div>
