--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,14 @@
     <h1>Shortly</h1>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
-    <div ng-view></div>
+    <div ui-view></div>
 
     <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular-route/angular-route.js"></script>
-
+    <!-- <script src="lib/angular-route/angular-route.js"></script> -->
+    <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="lib/angular-ui-router.stateHelper/statehelper.js"></script>
     <script src="app/auth/auth.js"></script>
+    <script src="app/nav/nav.js"></script>
     <script src="app/links/links.js"></script>
     <script src="app/shorten/shorten.js"></script>
     <script src="app/services/services.js"></script>
